--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -24,19 +24,19 @@
 <div class="container pt">
     <div class="row mt centered">
         <div class="col-lg-4">
-            <a href="work01.html">
+            <a asp-controller="Home" asp-action="Work01">
                 <img class="img-responsive" src="img/portfolio/port01.jpg" alt=""/>
             </a>
             <p>APE</p>
         </div>
         <div class="col-lg-4">
-            <a href="work01.html">
+            <a asp-controller="Home" asp-action="Work01">
                 <img class="img-responsive" src="img/portfolio/port02.jpg" alt=""/>
             </a>
             <p>RAIDERS</p>
         </div>
         <div class="col-lg-4">
-            <a href="work01.html">
+            <a asp-controller="Home" asp-action="Work01">
                 <img class="img-responsive" src="img/portfolio/port03.jpg" alt=""/>
             </a>
             <p>VIKINGS</p>
@@ -45,19 +45,19 @@
     <!-- /row -->
     <div class="row mt centered">
         <div class="col-lg-4">
-            <a href="work01.html">
+            <a asp-controller="Home" asp-action="Work01">
                 <img class="img-responsive" src="img/portfolio/port04.jpg" alt=""/>
             </a>
             <p>YODA</p>
         </div>
         <div class="col-lg-4">
-            <a href="work01.html">
+            <a asp-controller="Home" asp-action="Work01">
                 <img class="img-responsive" src="img/portfolio/port05.jpg" alt=""/>
             </a>
             <p>EMPERORS</p>
         </div>
         <div class="col-lg-4">
-            <a href="work01.html">
+            <a asp-controller="Home" asp-action="Work01">
                 <img class="img-responsive" src="img/portfolio/port06.jpg" alt=""/>
             </a>
             <p>CHIEFS</p>
