--- a/Portfolio/Views/Contacts/Index.cshtml
+++ b/Portfolio/Views/Contacts/Index.cshtml
@@ -8,7 +8,7 @@
     </div>
     <div class="row mt">
         <div class="col-lg-8 col-lg-offset-2">
-            <form class="contact-form php-mail-form" role="form" action="contactform/contactform.php" method="POST">
+            <form asp-controller="Contacts" asp-action="SendMessage" class="contact-form php-mail-form" role="form" method="POST">
 
                 <div class="form-group">
                     <input type="name" name="name" class="form-control" id="contact-name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
