--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                         <a asp-controller="Home" asp-action="Blog">Blog</a>
                     </li>
                     <li>
-                        <a asp-controller="Home" asp-action="Contact">Contact</a>
+                        <a asp-controller="Contacts" asp-action="Index">Contact</a>
                     </li>
                 </ul>
             </div>
