--- a/Portfolio/Views/Contacts/Index.cshtml
+++ b/Portfolio/Views/Contacts/Index.cshtml
@@ -11,7 +11,7 @@
             <form asp-controller="Contacts" asp-action="SendMessage" class="contact-form php-mail-form" role="form" method="POST">
 
                 <div class="form-group">
-                    <input type="name" name="name" class="form-control" id="contact-name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+                    <input type="text" name="name" class="form-control" id="contact-name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
                     <div class="validate"></div>
                 </div>
                 <div class="form-group">
