--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <link href="~/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <!--<link href="~/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">-->
 
     <link href="~/css/style.css" rel="stylesheet">
 </head>
