--- a/Portfolio/Views/Auth/Login.cshtml
+++ b/Portfolio/Views/Auth/Login.cshtml
@@ -8,21 +8,7 @@
 <h2>Login</h2>
 <form method="post" asp-controller="Auth" asp-action="Login">
     <div asp-validation-summary="ModelOnly"></div>
-    <div>
-        <label asp-for="Email"></label><br/>
-        <input asp-for="Email"/>
-        <span asp-validation-for="Email"></span>
-    </div>
-    <div>
-        <label asp-for="Password"></label><br/>
-        <input asp-for="Password"/>
-        <span asp-validation-for="Password"></span>
-    </div>
-    <div>
-        <label asp-for="RememberMe"></label><br/>
-        <input asp-for="RememberMe"/>
-        <span asp-validation-for="RememberMe"></span>
-    </div>
+    @Html.EditorForModel()
     <div>
         <input type="submit" value="Sign in"/>
     </div>
