--- a/Portfolio/Views/Blog/Blog.cshtml
+++ b/Portfolio/Views/Blog/Blog.cshtml
@@ -1,5 +1,5 @@
 @using System.Text
-@model Portfolio.Entity.Post
+@model BlogViewModel
 
 @{
     ViewBag.Title = "title";
@@ -19,7 +19,7 @@
                     <bd>@Model.Date</bd>
                 </p>
                 <h4>@Model.Title</h4>
-                <h2>@Model.PostTags.Aggregate(new StringBuilder(), (builder, tag) => builder.Append(tag.Name)).ToString()</h2>
+                <h2>@Model.Tags.ToList().Aggregate(new StringBuilder(), (builder, tag) => builder.Append(tag.Name)).ToString()</h2>
                 <p>@Model.Text</p>
                 <br>
                 <p>
