--- a/Portfolio/Views/Blog/Blog.cshtml
+++ b/Portfolio/Views/Blog/Blog.cshtml
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <p>
-                    <img src="img/user.png" width="50px" height="50px">
+                    <img src="~/img/user.png" width="50px" height="50px">
                     <ba>Stanley Stinson</ba>
                 </p>
                 <p>
