--- a/Portfolio/Views/Blog/Index.cshtml
+++ b/Portfolio/Views/Blog/Index.cshtml
@@ -2,9 +2,10 @@
 
 <!-- +++++ Posts Lists +++++ -->
 <!-- +++++ First Post +++++ -->
+@{ var white = false; }
 @foreach (var post in Model)
 {
-    <div id="grey">
+    <div id="@((white = !white) ? "white" : "grey")">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
