--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -54,6 +54,12 @@
                     <li>
                         <a asp-controller="Contacts" asp-action="Index">Contact</a>
                     </li>
+                    <li>
+                        <a asp-controller="Pictures" asp-action="Index">Pictures</a>
+                    </li>
+                    <li>
+                        <a asp-controller="Pictures" asp-action="Create">Create picture</a>
+                    </li>
                     @if (authenticated)
                     {
                         <li>
