--- a/Portfolio/Views/Auth/Login.cshtml
+++ b/Portfolio/Views/Auth/Login.cshtml
@@ -6,10 +6,11 @@
 }
 
 <h2>Login</h2>
-<form method="post" asp-controller="Auth" asp-action="Login">
+@using (Html.BeginForm("Login", "Auth", FormMethod.Post))
+{
     <div asp-validation-summary="ModelOnly"></div>
     @Html.EditorForModel()
     <div>
         <input type="submit" value="Sign in"/>
     </div>
-</form>
+}
