--- a/Portfolio/Views/Auth/Register.cshtml
+++ b/Portfolio/Views/Auth/Register.cshtml
@@ -6,10 +6,11 @@
 }
 
 <h2>Sign up</h2>
-<form method="post" asp-controller="Auth" asp-action="Register">
+@using (Html.BeginForm("Register", "Auth", FormMethod.Post))
+{
     <div asp-validation-summary="ModelOnly"></div>
     @Html.EditorForModel()
     <div>
         <input type="submit" value="Sign up"/>
     </div>
-</form>
+}
